[fix] Job Execution service: execute start() as async